# VScodeCmakeNinjaGTests

./: CMakeLists.txt  README.md  VSCode_CMake_Ninja_GTests.md  main.cpp
Inc/: Exam.h
Tests/: CMakeLists.txt  ExamTests.cpp
src/: Exam.cpp
